--- a/src/diagrams/upstream-nmf.ejs
+++ b/src/diagrams/upstream-nmf.ejs
@@ -45,10 +45,6 @@
         border: 1px solid #ccc;
     }
 
-    img.factor {
-        /* padding-right: 0.75rem; */
-    }
-
     .annotated-image {
         display: grid;
         grid-auto-flow: column;
@@ -124,11 +120,10 @@
     </div>
     <figcaption>
         <p>Using NMF factorization on the weights connecting six high-low frequency detectors in InceptionV1 to the two directly
-            preceding convolutional layers, <code>conv2d2</code> and <code>conv2d1</code>. The two factors correspond to
-            high and low frequencies, as becomes apparent in their feature visualizations. (Left column).</p>
-        <p>Their spatial arrangement is also very clear, with LF factors <span class="legend-label support">activating
+            preceding convolutional layers, <code>conv2d2</code> and <code>conv2d1</code>.</p>
+        <p>Their spatial arrangement is very clear, with LF factors <span class="legend-label support">activating
                 areas</span> in which high-low frequency detectors expect low frequencies, and <span
-                class="legend-label inhibit">inhibiting areas</span> in which they expect HF factors. The two factors
+                class="legend-label inhibit">inhibiting areas</span> in which they expect high frequencies. The two factors
             are very close to symmetric. Weight magnitudes normalized between -1 <img class="color-legend"
                 src="diagrams/2.1-upstream-nmf/pn-legend.png" /> and 1.</p>
     </figcaption>
