Fix certain diagram URLs so that they display correctly in Drafts

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -221,7 +221,7 @@
 
     <d-figure>
       <figure>
-        <img src="/diagrams/hf-lf-stimuli.svg" style="width: 70%; margin: auto; display: block; margin-bottom: 20px"/>
+        <img src="diagrams/hf-lf-stimuli.svg" style="width: 70%; margin: auto; display: block; margin-bottom: 20px"/>
       <figcaption>
           <p>
             Frequency and angle orientation were varied to construct a grid of synthetic stimuli. Next to each factor is a heatmap of its activations in response to each stimulus image, ranging from 0 to 1.
@@ -235,7 +235,7 @@
 
     <d-figure>
       <figure>
-        <img src="/diagrams/hf-lf-responses.svg"/>
+        <img src="diagrams/hf-lf-responses.svg"/>
       <figcaption>
           <p>
             Tuning curve for the HF-factor and LF-factor from <code>conv2d2</code> against synthetic high or low frequency images.
