--- a/src/diagrams/similar-directions.ejs
+++ b/src/diagrams/similar-directions.ejs
@@ -61,9 +61,7 @@
     <%= require('./similar-directions-model.ejs')({model}) %>
     <%}%>
     <figcaption>
-      <p>Note these are actual channels, not linear combinations approximating the detectors in InceptionV1.</p>
-        <p>
-            Note also that these detectors are found at very similar depths within the different networks.
+      <p>Note these are actual channels, not linear combinations approximating the detectors in InceptionV1. Note also that these detectors are found at very similar depths within the different networks.
         </p>
     </figcaption>
 </figure>
