--- a/src/index.ejs
+++ b/src/index.ejs
@@ -221,21 +221,21 @@
 
     <d-figure>
       <figure>
-        <img src="diagrams/hf-lf-stimuli.svg" style="width: 70%; margin: auto; display: block; margin-bottom: 20px"/>
+        <img src="diagrams/hf-lf-stimuli.svg" style="max-width: 400px; margin-bottom: 20px"/>
       <figcaption>
           <p>
-            Frequency and angle orientation were varied to construct a grid of synthetic stimuli. Next to each factor is a heatmap of its activations in response to each stimulus image, ranging from 0 to 1.
+            Frequency and angle of orientation were varied to construct a grid of synthetic stimuli. Next to each factor is a heatmap of its activations in response to each stimulus image, ranging from 0 to 1.
           </p>
       </figcaption>
       </figure>
     </d-figure>
 
 
-    <p>The activations are relatively independent of the image's angle, but highly specific to its frequency. Averaging the results over all angles produces a line plot of each factor's magnitude of activation by frequency, demonstrating each factor's approximate specificity to a particular range of frequencies.
+    <p>The activations are relatively independent of the image's angle, but sensitive to its frequency. Averaging the results over all angles produces a line plot of each factor's magnitude of activation by frequency, demonstrating each factor's approximate specificity to a particular range of frequencies.
 
     <d-figure>
       <figure>
-        <img src="diagrams/hf-lf-responses.svg"/>
+        <img src="diagrams/hf-lf-responses.svg" style="margin-bottom: 20px;"/>
       <figcaption>
           <p>
             Tuning curve for the HF-factor and LF-factor from <code>conv2d2</code> against synthetic high or low frequency images.
@@ -247,45 +247,45 @@
     </d-figure>
 
 
-    <p>For future analyses, instead of dealing with two sets of neurons, we can now deal with two <i>vectors</i> over the neurons in <code>conv2d2</code> or <code>conv2d1</code>. Thus equipped with the HF-factor and the LF-factor, we can ask: how are these two factors used to produce high-low frequency detectors?</p>
+    <p>Instead of dealing with two sets of neurons, in future analyses we can now deal with two <i>vectors</i> over the neurons in <code>conv2d2</code> or <code>conv2d1</code>. Thus equipped with the HF-factor and the LF-factor, we can ask: how are these two factors used to produce high-low frequency detectors?</p>
 
     <h4>Construction of high-low frequency detectors</h4>
 
-    <p>NMF also recovers the weights between each factor and the high-low frequency detectors, demonstrating how those detectors use the HF-factor and the LF-factor.
+    <p>NMF also recovers the weights between each of the two factors and the high-low frequency detectors, demonstrating how those detectors actually use the HF-factor and the LF-factor.
     Each high-low frequency detector has a region where the HF-factor activates and the LF-factor inhibits, and an opposite region where the LF-factor activates and the HF-factor inhibits.</p>
 
     <%= require('./diagrams/upstream-nmf.ejs')() %>
 
-    <p>Inspecting these weights shows that high-low frequency detectors are built up by spatial arrangement of high and low frequency detection, confirming the second half of Hypothesis 1.</p>
+    <p>Inspecting these weights shows that high-low frequency detectors are built up by spatial arrangement of high frequency detection and low frequency detection, confirming the second half of Hypothesis 1.</p>
 
-    <p>Against Hypothesis 2, even texture contrast detectors such as <a href="https://storage.googleapis.com/inceptionv1-weight-explorer/conv2d2_181.html"><code>conv2d2</code> 181</a> seem to fall on one side or the other of this dichotomy. Although <code>conv2d2</code> 181 is most strongly connected to the high-low frequency detector <a href="https://storage.googleapis.com/inceptionv1-weight-explorer/mixed3a_70.html"><code>mixed3a</code> 70</a>, the structure of its weights indicates that it contributes more generically to high-frequency detection as a component of the HF-factor rather than contributing any of the existing spatial structure of its texture contrast detection directly.</p>
+    <p>Against Hypothesis 2, note that even texture contrast detectors such as <a href="https://storage.googleapis.com/inceptionv1-weight-explorer/conv2d2_181.html"><code>conv2d2</code> 181</a> seem to fall on one side or the other of this dichotomy. Although <code>conv2d2</code> 181 is most strongly connected to the high-low frequency detector <a href="https://storage.googleapis.com/inceptionv1-weight-explorer/mixed3a_70.html"><code>mixed3a</code> 70</a>, the structure of its weights indicates that it contributes more generically to high-frequency detection as a component of the HF-factor rather than contributing any of the existing spatial structure of its texture contrast detection directly.</p>
 
     <d-figure>
       <figure>
-        <img src="/images/texture-contrast-detector.svg" style="width: 50%; margin: auto; margin-bottom: 20px; display: block"/>
+        <img src="images/texture-contrast-detector.svg" style="width: 50%; margin: auto; margin-bottom: 20px; display: block"/>
       <figcaption>
           <p>
-            The weights from <code>conv2d2</code> 181 to <code>mixed3a</code> 70 are consistent with <code>conv2d2</code> 181 contributing through the HF-factor, losing the spatial structure of <code>conv2d2</code> 181's texture contrast detection.
+            The weights from <code>conv2d2</code> 181 to <code>mixed3a</code> 70 are consistent with <code>conv2d2</code> 181 contributing via the HF-factor, not via the existing spatial structure of its texture contrast detection.
           </p>
       </figcaption>
       </figure>
     </d-figure>
 
+    <p>Now that we understand how they are constructed, how are high-low frequency detectors used by higher-level features?</p>
 
     <!-- Alternate title: Downstream Circuits -->
     <!-- Alternate alternate title: Feature Usage -->
     <h2 id="feature-use">How high-low frequency detectors are used</h2>
-    <p>How are high-low frequency detectors used in the construction of higher-level features?</p>
+
+    <p>
+      In <a href="https://distill.pub/2020/circuits/early-vision/#mixed3b">mixed3b</a>, high-low frequency detectors contribute to a variety of features: <a href="https://distill.pub/2020/circuits/early-vision/#group_mixed3b_bumps">bumps</a> and <a href="https://distill.pub/2020/circuits/early-vision/#group_mixed3b_divots">divots</a>, <a href="https://distill.pub/2020/circuits/early-vision/#group_mixed3b_bar_line_like">line-like</a> and <a href="https://distill.pub/2020/circuits/early-vision/#group_mixed3b_curves_misc.">curve-like</a> shapes,
+      and at least one each of <a href="https://storage.googleapis.com/inceptionv1-weight-explorer/mixed3b_281.html">center-surrounds</a>, <a href="https://storage.googleapis.com/inceptionv1-weight-explorer/mixed3b_372.html">patterns</a>, and <a href="https://storage.googleapis.com/inceptionv1-weight-explorer/mixed3b_276.html">textures</a>.
+    </p>
 
     <span class="todo">Detail some of the individual rows here in as much precision as you show mixed3b 345?</span>
 
-    <h3>In mixed3b</h3>
     <%= require('./diagrams/downstream-neurons.ejs')() %>
 
-    <p>
-      As shown above, in <a href="https://distill.pub/2020/circuits/early-vision/#mixed3b">mixed3b</a> high-low frequency detectors contribute to a variety of features: <a href="https://distill.pub/2020/circuits/early-vision/#group_mixed3b_bumps">bumps</a> and <a href="https://distill.pub/2020/circuits/early-vision/#group_mixed3b_divots">divots</a>, <a href="https://distill.pub/2020/circuits/early-vision/#group_mixed3b_bar_line_like">line-like</a> and <a href="https://distill.pub/2020/circuits/early-vision/#group_mixed3b_curves_misc.">curve-like</a> shapes,
-      and at least one each of <a href="https://storage.googleapis.com/inceptionv1-weight-explorer/mixed3b_281.html">center-surrounds</a>, <a href="https://storage.googleapis.com/inceptionv1-weight-explorer/mixed3b_372.html">patterns</a>, and <a href="https://storage.googleapis.com/inceptionv1-weight-explorer/mixed3b_276.html">textures</a>.
-    </p>
 
     <p>However, by far the primary downstream contribution of high-low frequency detectors is to <i>boundary detectors</i>: to some extent to <a href="https://distill.pub/2020/circuits/early-vision/#group_mixed3b_double_boundary">double boundary detectors</a> and <a href="https://distill.pub/2020/circuits/early-vision/#group_mixed3b_boundary_misc">miscellaneous boundary detectors</a>, but especially to <a href="https://distill.pub/2020/circuits/early-vision/#group_mixed3b_boundary">object boundary detectors</a>.</p>
 
